[package]
name = "rss"
version = "0.1.0"
authors = ["Jeremy Borgman <borgman.jeremy@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rss"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
tokio = "0.2.24"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.4.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.10.1"

[dev-dependencies]
reqwest = "0.10.10"
