[package]
name = "rss"
version = "0.1.0"
authors = ["Jeremy Borgman <borgman.jeremy@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rss"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
tokio = "0.2.24"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.4.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = "0.10.1"
chrono = "0.4.19"
uuid = {version = "0.8.1", features = ["v4"]}
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.1"
tracing-actix-web = "0.2.1"
serde-aux = "2.1.0"
unicode-segmentation = "1.7.1"

[dev-dependencies]
reqwest = "0.10.10"
lazy_static = "1.4.0"
claim = "0.4.0"
